--- a/Unsplatter/Supporting Files/Info.plist
+++ b/Unsplatter/Supporting Files/Info.plist
@@ -46,5 +46,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Use Library for saving images</string>
 </dict>
 </plist>
